--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 		<title>Backronym</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="script/main.js"></script>
-		<link href="css/fonts.css" type="text/css" rel="stylesheet" >
-        <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300" rel="stylesheet">
-		<link rel = "stylesheet"
-			type = "text/css"
-			href = "stylesheet.css" />
-
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+		<link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
 	</head>
 	<body>
 		<div class="header">
