added footer, more css

--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
 		<link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
 	</head>
 	<body>
-		<div class="header">
-            <!-- probably just social media shit -->
-        </div>
-        <div class="intro">
-            <h1 class="logo">Backronym</h1>
-            <h3>Type something to turn into a backronym</h3>
-            <input type="text" class="user-input" onkeypress="handleKeyPress(event)">
-        </div>
-        <div class="content">
+		<div class="container">
+			<div class="header">
+           	 <!-- probably just social media shit -->
+        	</div>
+        	<div class="intro">
+            	<h1 class="logo">Backronym</h1>
+            	<h3>Type something to turn into a backronym</h3>
+            	<input type="text" class="user-input" onkeypress="handleKeyPress(event)">
+        	</div>
+        	<div class="content">
             
-        </div>
-
+			</div>
+			<div class="push"></div>
+		</div>
+		
+		<div class="footer">
+			<p>(c) 2017 Ben Gaudiosi</p>
+		</div>
 	</body>
 
 </html>
