--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Backronym</title>
+		<title>Backronym: Generate Mnemonic Devices</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Generate mnemonic devices to help memorize words.">
+		<meta name="keywords" content="backronym, acronym, acronyms, mnemonic, mnemonics, memory, memorize, abbreviation, study, studying">
+		<meta name="author" content="Ben Gaudiosi">
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="script/main.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
@@ -15,7 +21,7 @@
         	<div class="intro">
             	<h1 class="logo">Backronym</h1>
             	<h3>Type something to turn into a backronym</h3>
-            	<input type="text" class="user-input" onkeypress="handleKeyPress(event)">
+            	<input type="text" maxlength="10" class="user-input" onkeypress="handleKeyPress(event)">
         	</div>
         	<div class="content">
             
