--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 		<link rel = "stylesheet" type = "text/css" href = "stylesheet.css" />
 	</head>
 	<body>
+		
 		<div class="container">
-			<div class="header">
-           	 <!-- probably just social media shit -->
-        	</div>
         	<div class="intro">
             	<h1 class="logo">Backronym</h1>
-            	<h3>Type something to turn into a backronym</h3>
+            	<h3>Type something to turn into a backronym and press enter.</h3>
             	<input type="text" maxlength="9" class="user-input" onkeypress="handleKeyPress(event)">
         	</div>
         	<div class="content">
@@ -30,7 +28,16 @@
 		</div>
 		
 		<div class="footer">
-			<p>(c) 2017 Ben Gaudiosi</p>
+			<div id="fb-root"></div>
+			<script>(function(d, s, id) {
+				var js, fjs = d.getElementsByTagName(s)[0];
+				if (d.getElementById(id)) return;
+				js = d.createElement(s); js.id = id;
+				 js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+				fjs.parentNode.insertBefore(js, fjs);
+			}(document, 'script', 'facebook-jssdk'));</script>
+			<p>(c) 2017 Ben Gaudiosi | </p>
+			<div class="fb-share-button" data-href="https://bgaudiosi.github.io/backronym/" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbgaudiosi.github.io%2Fbackronym%2F&amp;src=sdkpreparse">Share</a></div>
 		</div>
 	</body>
 
