temp removed share

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		</div>
 		
 		<div class="footer">
+			<!--
 			<div id="fb-root"></div>
 			<script>(function(d, s, id) {
 				var js, fjs = d.getElementsByTagName(s)[0];
@@ -35,9 +36,9 @@
 				js = d.createElement(s); js.id = id;
 				 js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
 				fjs.parentNode.insertBefore(js, fjs);
-			}(document, 'script', 'facebook-jssdk'));</script>
-			<p>(c) 2017 Ben Gaudiosi | </p>
-			<div class="fb-share-button" data-href="https://bgaudiosi.github.io/backronym/" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbgaudiosi.github.io%2Fbackronym%2F&amp;src=sdkpreparse">Share</a></div>
+				}(document, 'script', 'facebook-jssdk'));</script> -->
+			<p>(c) 2017 Ben Gaudiosi</p>
+			<!-- <div class="fb-share-button" data-href="https://bgaudiosi.github.io/backronym/" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbgaudiosi.github.io%2Fbackronym%2F&amp;src=sdkpreparse">Share</a></div> -->
 		</div>
 	</body>
 
